@@ -1836,6 +1836,11 @@ The gallery pages are generated using the ``gallery.tmpl`` template, and you can
 customize it there (you could switch to another lightbox instead of baguetteBox, change
 its settings, change the layout, etc.).
 
+Images in galleries may be provided with captions and given a specific
+ordering, by creating a file in the gallery directory called metadata.yml.
+This YAML file should contain a 'name' field for each image in the gallery,
+and (if desired) either or both of 'caption' and 'order'. 
+
 Images to be used in normal posts can be placed in the ``images`` folder. These
 images will be processed and have thumbnails created just as for galleries, but will
 then be copied directly to the corresponding path in the ``output`` directory, so you
@@ -1860,6 +1865,13 @@ The ``conf.py`` options affecting images and gallery pages are these:
 
     # If set to False, it will sort by filename instead. Defaults to True
     GALLERY_SORT_BY_DATE = True
+
+    # If set to true, then the user can provide an metadata file which contains
+    # the order in which photos in a gallery should be presented. This file is
+    # named metadata.yml, is YAML and must contain at least a 'name' field. Other
+    # recognised field names are 'order' and 'caption'.
+    # Defaults to True
+    # GALLERY_SORT_BY_META_FILE = True
 
     # Folders containing images to be used in normal posts or pages.
     # IMAGE_FOLDERS is a dictionary of the form {"source": "destination"},
